Fixed spacing

--- a/src/components/organisms/Footer/styles/index.scss
+++ b/src/components/organisms/Footer/styles/index.scss
@@ -9,6 +9,7 @@ footer#main-footer {
     @include safe-zone();
     display: flex;
     flex-flow: row nowrap;
+    align-items: center;
 
     padding: 1rem 2.5rem;
 
